--- a/experience.html
+++ b/experience.html
@@ -8,49 +8,53 @@
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
-    <div class="main-nav">
+    <nav class="main-nav">
         <ul class="nav">
           <li class="name">Bimal Rai</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="experience.html">Experience</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
-    </div>
+    </nav>
 
     <header id="hero_experince">
+      <img src="images/pimage.png" alt="Bimal's Picture" class="profile-image">
       <h1 class="tag name">Experience</h1>
     </header>
 
     <main class="flex">
-      <div class="card">
+      <section class="card">
         <h2>Experience</h2>
         <p class="paraBold">Professional Sales Limited/Auckland / June - July 2018</p>
         <p>Professional Sales Limited is a sales and marketing solutions company, sales Trustpower’s internet, power and gas throughout New Zealand. – up to 20 employees.</p>
         <br>
         <p class="paraBold">Global Media Makarios, Nepal / Aug. 2015 - Feb. 2018</p>
         <p>Global Media Makarios is a studio that outsources graphics, animation and visual effects projects. – 11 employees</p>
-      </div> 
+      </section> 
 
-      <div class="card">
+      <section class="card">
         <h2>Skills</h2>
-        <p>I have develop following technical skills during my career.</p>
+        <p class="paraBold">Technical Skills</p>
         <ul class="skills">
           <li>Photoshop</li>
           <li>Illustrator</li>
           <li>Indesign</li>
           <li>XD</li>
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>javaScript</li>
+          <li>After Effects</li>
         </ul>
-        <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
-      </div>
-
+        <p class="paraBold">Employabolity Skills</p>
+        <ul class="skills">
+          <li>Teamwork</li>
+          <li>Communication</li>
+          <li>Work Ethic</li>
+          <li>Self-Management</li>
+          <li>Problem solving</li>
+        </ul>
+      </section>
     </main>
     <footer>
       <ul>
-        <li><a href="https://twitter.com/" target="_blank" class="social twitter">Twitter</a></li>
-        <li><a href="https://www.linkedin.com/" target="_blank" class="social linkedin">LinkedIn</a></li>
-        <li><a href="https://github.com/" target="_blank" class="social github">Github</a></li>
+        <li><a href="https://github.com/rbimal49" target="_blank" class="social github">Github</a></li>
       </ul>
       <p class="copyright">Copyright 2020, Bimal Rai</p>
     </footer>
