--- a/index.html
+++ b/index.html
@@ -8,52 +8,58 @@
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
-    <div class="main-nav">
+    <nav class="main-nav">
         <ul class="nav">
           <li class="name">Bimal Rai</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="experience.html">Experience</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
-    </div>
+    </nav>
 
     <header>
-      <img src="images/me.png" alt="picture of Bimal Rai" class="profile-image">
+      <img src="images/pimage.png" alt="Bimal's Picture" class="profile-image">
       <h1 class="tag name">Hello, I’m Bimal.</h1>
       <p class="tag location">I live in Auckland, New Zealand.</p>
     </header>
 
-    <main class="flex">
-      <div class="card">
-        <h2>Background</h2>
-        <p>I am a Web Developer and Graphic Designer with three years
-          of experience. Throughout my career, I have worked on
-          a range of projects including web design, user interface design,
-          newspaper design, magazine design, branding.</p>
-        <p>Working on a range of project has helped me to deep
-          understanding the aspects that are needed for a designer. During
-          my journey, I fine-tuned my technical and communication skills and
-          helped to find specific solutions for diverse problems.</p>
-      </div> 
-
-      <div class="card">
-        <h2>Goals</h2>
-        <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
-        <ul class="skills">
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>Bootstrap</li>
-          <li>php</li>
-        </ul>
-        <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
-      </div>
-
+    <main class="">
+        <div class="flex">
+          <section class="card">
+            <h2>Background</h2>
+            <p>I’m an aspiring Front End Web Developer and Graphic Designer based in Auckland, New Zealand with more than 2 year of experience.</p>
+            <p>Working on a range of project has helped me to deep
+              understanding the aspects that are needed for a designer. During
+              my journey, I fine-tuned my technical and communication skills and
+              helped to find specific solutions for diverse problems.</p>
+          </section> 
+    
+          <section class="card">
+            <h2>Goals</h2>
+            <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
+            <ul class="skills">
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>JavaScript</li>
+              <li>Bootstrap</li>
+              <li>php</li>
+            </ul>
+            <br>
+            <h2>Leisure Interest’s</h2>
+            <p>Travel, Photography, Illustration, Motion Graphy</p>
+          </section>
+        </div> 
+        
+        <h2>Services</h2>
+        <div class="flex">
+          <img src="images/g1.jpg" alt="wireframe image" class="gallery">
+          <img src="images/g2.jpg" alt="coding image" class="gallery">
+          <img src="images/g3.jpg" alt="team work image" class="gallery">
+        </div>
     </main>
     <footer>
       <ul>
-        <li><a href="https://twitter.com/" target="_blank" class="social twitter">Twitter</a></li>
-        <li><a href="https://www.linkedin.com/" target="_blank" class="social linkedin">LinkedIn</a></li>
-        <li><a href="https://github.com/" target="_blank" class="social github">Github</a></li>
+        <li><a href="https://github.com/rbimal49" target="_blank" class="social github">Github</a></li>
       </ul>
       <p class="copyright">Copyright 2020, Bimal Rai</p>
     </footer>
